--- a/src/lib/components/layout/left-column/_styles.less
+++ b/src/lib/components/layout/left-column/_styles.less
@@ -45,10 +45,10 @@
 			background-color: var(--coo-secondary-04);
 			color: var(--coo-secondary);
 			border-right: 1px solid var(--coo-secondary-03);
-			max-width: @rdb-left-sidebar-width !important;
-			min-width: @rdb-left-sidebar-width !important;
-			width: @rdb-left-sidebar-width !important;
-			flex: 0 0 @rdb-left-sidebar-width !important;
+			max-width: var(--coo-left-sidebar-width) !important;
+			min-width: var(--coo-left-sidebar-width) !important;
+			width: var(--coo-left-sidebar-width) !important;
+			flex: 0 0 var(--coo-left-sidebar-width) !important;
 
 			&__header {
 				transition: all .2s;
