--- a/src/lib/components/layout/secondary-column/_styles.less
+++ b/src/lib/components/layout/secondary-column/_styles.less
@@ -2,9 +2,9 @@
 	background-color: var(--coo-white-bk);
 	color: var(--coo-secondary);
 	left: 0;
-	max-width: @rdb-layout-secondary-column-width !important;
-	min-width: @rdb-layout-secondary-column-width !important;
-	width: @rdb-layout-secondary-column-width !important;
+	max-width: var(--coo-layout-secondary-column-width) !important;
+	min-width: var(--coo-layout-secondary-column-width) !important;
+	width: var(--coo-layout-secondary-column-width) !important;
 
 	.l-data-table {
 		.ant-table {
@@ -44,7 +44,7 @@
 	}
 
 	.ant-layout-sider-trigger {
-		width: @rdb-layout-secondary-column-width !important;
+		width: var(--coo-layout-secondary-column-width) !important;
 	}
 
 	> .anticon {
