feat: migrate right column

--- a/src/lib/components/layout/_styles.less
+++ b/src/lib/components/layout/_styles.less
@@ -186,12 +186,12 @@
 		}
 
 		.ant-layout-header {
-			right: @rdb-right-sidebar-width;
-			width: ~"calc(100% - @{@rdb-right-sidebar-width})";
+			right: var(--coo-right-sidebar-width);
+			width: "calc(100% - var(--coo-right-sidebar-width))";
 		}
 
 		.ant-layout-content {
-			margin-right: @rdb-right-sidebar-width;
+			margin-right: var(--coo-right-sidebar-width);
 		}
 	}
 
