--- a/src/lib/components/layout/main-column/_styles.less
+++ b/src/lib/components/layout/main-column/_styles.less
@@ -9,7 +9,7 @@
 		padding: 0;
 		position: fixed;
 		left: 0;
-		right: @rdb-right-sidebar-width;
+		right: var(--coo-right-sidebar-width);
 		z-index: 1;
 		border-bottom: 0;
 		background-color: var(--coo-white-bk);
