--- a/src/lib/components/layout/right-column/_styles.less
+++ b/src/lib/components/layout/right-column/_styles.less
@@ -5,7 +5,7 @@
 	right: 0;
 
 	.ant-layout-sider-trigger {
-		width: @rdb-right-sidebar-width !important;
+		width: var(--coo-right-sidebar-width) !important;
 	}
 
 	.anticon {
