--- a/src/lib/components/tools-box/_styles.less
+++ b/src/lib/components/tools-box/_styles.less
@@ -2,7 +2,7 @@
 	display: grid;
 	user-select: none;
 	border: 1px solid var(--coo-secondary-03);
-	width: ~"calc(@{rdb-right-sidebar-width} - 1rem)";
+	width: "calc(var(--coo-right-sidebar-width) - 1rem)";
 	background-color: var(--coo-secondary-04);
 	.shadow--z-5 ();
 
