--- a/src/styles/_theme.less
+++ b/src/styles/_theme.less
@@ -19,6 +19,7 @@ html {
 	--coo-left-sidebar-width: 15rem;
 	--coo-secondary-sidebar-collapsed-width: 1.618rem;
 	--coo-sidebar-collapsed-width: 5rem;
+	--coo-right-sidebar-width: var(--right-column-width, 15rem);
 }
 
 a {
@@ -418,7 +419,6 @@ textarea::placeholder {
 	color: var(--coo-primary);
 }
 
-@rdb-right-sidebar-width: var(--right-column-width, 15rem);
 @rdb-header-height: 5rem;
 @rdb-sidebar-trigger-height: 3rem;
 @rdb-overall-top-height: 7rem;
