fix: read min-width and max-width from css var for right column (#54)
* fix: read value from css var

* fix: less

---------

Co-authored-by: Luca Tagliabue <luca.tagliabue@radicalbit.io>

--- a/src/lib/components/layout/right-column/_styles.less
+++ b/src/lib/components/layout/right-column/_styles.less
@@ -3,6 +3,9 @@
 	color: var(--coo-dark);
 	border-left: 1px solid var(--coo-secondary-03);
 	right: 0;
+	max-width: var(--coo-right-sidebar-width) !important;
+	min-width: var(--coo-right-sidebar-width) !important;
+	width: var(--coo-right-sidebar-width) !important;
 
 	.ant-layout-sider-trigger {
 		width: var(--coo-right-sidebar-width) !important;
