fix: less autofix

--- a/src/lib/components/collapse/_styles.less
+++ b/src/lib/components/collapse/_styles.less
@@ -138,7 +138,7 @@
 	&--border-bottom {
 		&.ant-collapse {
 			.ant-collapse-item {
-				border-bottom: 0.063rem solid var(--coo-secondary-03);
+				border-bottom: .063rem solid var(--coo-secondary-03);
 			}
 		}
 	}
