feat: Add type="border-bottom" for <Collapse /> (#56)
* feat: add border-bottom as collapse type

* fix: less autofix

---------

Co-authored-by: Luca Tagliabue <luca.tagliabue@radicalbit.io>

--- a/src/lib/components/collapse/_styles.less
+++ b/src/lib/components/collapse/_styles.less
@@ -87,6 +87,7 @@
 		}
 	}
 
+
 	&--minimal {
 		padding: 0;
 
@@ -133,6 +134,14 @@
 		}
 	}
 
+
+	&--border-bottom {
+		&.ant-collapse {
+			.ant-collapse-item {
+				border-bottom: .063rem solid var(--coo-secondary-03);
+			}
+		}
+	}
 
 	&--no-border {
 		&.ant-collapse {
