fix: type border-bottmo

--- a/src/lib/components/collapse/_styles.less
+++ b/src/lib/components/collapse/_styles.less
@@ -138,6 +138,7 @@
 	&--border-bottom {
 		&.ant-collapse {
 			.ant-collapse-item {
+				border: none;
 				border-bottom: .063rem solid var(--coo-secondary-03);
 			}
 		}
