fix: ant popover arrow bkg

--- a/src/lib/components/popover/_styles.less
+++ b/src/lib/components/popover/_styles.less
@@ -44,6 +44,10 @@
 		font-size: var(--coo-font-size-s);
 		min-width: 12rem;
 
+		.ant-popover-arrow::before {
+			background: var(--coo-white-bk);
+		}
+
 		.ant-popover-bottom-margin {
 			display: block;
 		}
