fix: font color

--- a/src/lib/components/popconfirm/_styles.less
+++ b/src/lib/components/popconfirm/_styles.less
@@ -31,6 +31,10 @@
 			overflow: hidden;
 			text-overflow: ellipsis;
 		}
+
+		.ant-popconfirm-description {
+			color: var(--coo-dark);
+		}
 	}
 
 	.ant-popconfirm-buttons {
