fix: dark mode font color for popover and popconfirm (#62)
* fix: font color

* fix: less

---------

Co-authored-by: Luca Tagliabue <luca.tagliabue@radicalbit.io>

--- a/src/lib/components/popover/_styles.less
+++ b/src/lib/components/popover/_styles.less
@@ -44,6 +44,14 @@
 		font-size: var(--coo-font-size-s);
 		min-width: 12rem;
 
+		.ant-popover-content {
+			.ant-popover-inner {
+				.ant-popover-title {
+					color: var(--coo-dark);
+				}
+			}
+		}
+
 		.ant-popover-arrow::before {
 			background: var(--coo-white-bk);
 		}
