fix: modal less

--- a/src/lib/components/rbit-modal/_styles.less
+++ b/src/lib/components/rbit-modal/_styles.less
@@ -1,7 +1,9 @@
-.c-rbit-modal.ant-modal {
-	font-weight: normal;
-	max-width: 100vw;
-	color: var(--coo-dark);
+.c-rbit-modal {
+	&.ant-modal  {
+		font-weight: normal;
+		max-width: 100vw;
+		color: var(--coo-dark);
+	}
 
 	> div {
 		.ant-modal-content {
