--- a/src/lib/components/dropdown/_styles.less
+++ b/src/lib/components/dropdown/_styles.less
@@ -17,6 +17,10 @@
 				cursor: not-allowed;
 			}
 		}
+
+		.ant-dropdown-menu-item-divider {
+			background-color: var(--coo-secondary-03);
+		}
 	}
 
 	.ant-dropdown-trigger {
