fix: modal and right resizer

--- a/src/lib/components/data-table/_styles.less
+++ b/src/lib/components/data-table/_styles.less
@@ -22,6 +22,12 @@
 	}
 
 	.ant-table-cell {
+		.ant-empty {
+			.ant-empty-description {
+				color: var(--coo-dark);
+			}
+		}
+
 		.l-data-table__action {
 			opacity: 0;
 			gap: 1rem;
