--- a/src/lib/components/layout/right-column/_styles.less
+++ b/src/lib/components/layout/right-column/_styles.less
@@ -50,3 +50,62 @@
 		display: inline-block;
 	}
 }
+
+.c-right-column-resizer {
+	position: fixed;
+	top: 0;
+	right: calc(var(--coo-right-sidebar-width, 20rem) - .625rem);
+	height: 100vh;
+	width: 1.25rem;
+	cursor: col-resize;
+	z-index: 1000;
+	user-select: auto;
+	background-color: transparent;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	&.is-dragging {
+		user-select: none;
+	}
+
+	&__vertical {
+		position: relative;
+		height: 100%;
+		width: .0625rem;
+		background-color: var(--coo-secondary-03);
+		transition: background-color .3s ease, box-shadow .3s ease;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		&.is-dragging {
+			background-color: var(--coo-primary);
+		}
+	}
+
+	&__left,
+	&__right {
+		width: 1.5rem;
+		height: 2.5rem;
+		cursor: col-resize;
+		border-radius: 1.25rem;
+		background-color: var(--coo-secondary-03);
+		transition: background-color .3s ease;
+		position: relative;
+		box-shadow: 0 0 .25rem rgba(0, 0, 0, .15);
+
+		&.is-dragging {
+			background-color: var(--coo-primary);
+		}
+	}
+
+	&__left {
+		left: -.25rem;
+	}
+
+	&__right {
+		left: .25rem;
+	}
+}
+
