Add prefix to section title

--- a/src/lib/components/section-title/_styles.less
+++ b/src/lib/components/section-title/_styles.less
@@ -68,6 +68,11 @@
 			}
 		}
 
+		&-prefix {
+			font-size: 1.2rem;
+			font-weight: var(--coo-font-weight-normal);
+		}
+
 		&-suffix {
 			font-size: 1.2rem;
 			font-weight: var(--coo-font-weight-normal);
