fix: menu bkg color and font color

--- a/src/styles/_components.less
+++ b/src/styles/_components.less
@@ -36,6 +36,7 @@
 @import 'json/_styles';
 @import 'layout/_styles';
 @import 'list/_styles';
+@import 'menu/_styles';
 @import 'map-marker/_styles';
 @import 'markdown-render/_styles';
 @import 'message/_styles';
