--- a/src/lib/components/menu/_styles.less
+++ b/src/lib/components/menu/_styles.less
@@ -1,6 +1,14 @@
 .c-menu {
 	&.ant-menu {
-		color: var(--coo-dark);
 		background-color: var(--coo-white-bk);
+
+		.ant-menu-title-content {
+			color: var(--coo-secondary);
+			font-weight: var(--coo-font-weight-light);
+		}
+
+		.ant-menu-item-divider {
+			background-color: var(--coo-secondary-03);
+		}
 	}
 }
