Fix secondary color and title alignement

--- a/src/lib/components/button/_styles.less
+++ b/src/lib/components/button/_styles.less
@@ -194,7 +194,7 @@
 
 	&.ant-btn-secondary {
 		background-color: var(--coo-secondary);
-		color: var(--coo-white);
+		color: var(--coo-secondary-04);
 		border-color: var(--coo-secondary);
 
 		&:hover {
