--- a/src/lib/components/section-title/_styles.less
+++ b/src/lib/components/section-title/_styles.less
@@ -13,7 +13,7 @@
 		font-weight: var(--coo-font-weight-bolder);
 		font-family: var(--coo-header-font);
 		font-size: 1.5rem;
-		align-items: baseline;
+		align-items: center;
 		color: var(--title-color, --coo-dark);
 
 		&--weight {
