fix: collapse bkg

--- a/src/lib/components/collapse/_styles.less
+++ b/src/lib/components/collapse/_styles.less
@@ -187,11 +187,11 @@
 		&.ant-collapse {
 			.ant-collapse-item {
 				.ant-collapse-header {
-					background-color: var(--coo-rgb-primary, .1);
+					background-color: rgba(var(--coo-rgb-secondary), .1);
 				}
 
 				.ant-collapse-content {
-					background-color: var(--coo-rgb-primary, .1);
+					background-color: rgba(var(--coo-rgb-secondary), .1);
 				}
 			}
 		}
@@ -201,11 +201,11 @@
 		&.ant-collapse {
 			.ant-collapse-item {
 				.ant-collapse-header {
-					background-color: var(--coo-rgb-primary, .1);
+					background-color: rgba(var(--coo-rgb-primary), .1);
 				}
 
 				.ant-collapse-content {
-					background-color: var(--coo-rgb-primary, .1);
+					background-color: rgba(var(--coo-rgb-primary), .1);
 				}
 			}
 		}
