fix: less autofix

--- a/src/lib/components/date-picker/_styles.less
+++ b/src/lib/components/date-picker/_styles.less
@@ -206,8 +206,8 @@
 
 						.ant-picker-time-panel-cell-inner {
 							color: var(--coo-dark);
-							background-color: rgba(var(--coo-rgb-primary), 0.2);
-							border: 1px solid rgba(var(--coo-rgb-primary), 0.2);
+							background-color: rgba(var(--coo-rgb-primary), .2);
+							border: 1px solid rgba(var(--coo-rgb-primary), .2);
 						}
 					}
 
