fix: range picker hours background (#86)
* fix: hours bkg

* fix: less autofix

---------

Co-authored-by: Luca Tagliabue <luca.tagliabue@radicalbit.io>

--- a/src/lib/components/date-picker/_styles.less
+++ b/src/lib/components/date-picker/_styles.less
@@ -205,9 +205,9 @@
 						border-radius: 1rem;
 
 						.ant-picker-time-panel-cell-inner {
-							color: var(--coo-white);
-							background-color: var(--coo-primary);
-							border: 1px solid var(--coo-primary);
+							color: var(--coo-dark);
+							background-color: rgba(var(--coo-rgb-primary), .2);
+							border: 1px solid rgba(var(--coo-rgb-primary), .2);
 						}
 					}
 
@@ -222,6 +222,7 @@
 	.ant-picker-footer {
 		background: var(--coo-white-bk);
 		color: var(--coo-dark);
+		padding: 1rem 0;
 
 		.ant-picker-now-btn {
 			padding: .5rem;
@@ -242,3 +243,4 @@
 		}
 	}
 }
+
