feat: change css

--- a/src/lib/components/layout/_styles.less
+++ b/src/lib/components/layout/_styles.less
@@ -7,7 +7,7 @@
 .rdb-layout,
 .cona-theme {
 	.cona-l-sider {
-		background-color: var(--coo-white-bk);
+		background-color: var(--coo-secondary-02);
 
 		&__header {
 			border-bottom: 0;
@@ -34,6 +34,10 @@
 		min-height: 100vh;
 		z-index: 100;
 		position: fixed;
+
+		&-dark {
+			background: var(--coo-black);
+		}
 
 		.ant-layout-sider-trigger {
 			transition: width .2s;
