--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -1,96 +1,96 @@
 // * * * * COLORS SETUP * * * *
 :root,
 .light {
-  // to use for color effects and less-antd variables es: rgba(var(--coo-white), .8)
-  //254, 254, 251; // #fefefb
-  --coo-rgb-white: 254, 254, 251; // #fcfcf9 x
-  --coo-rgb-black: 0, 0, 0; // #000000
-  --coo-rgb-dark: 19, 52, 59; // #13343B x
-  // primaries
-  --coo-rgb-primary-dark: 0, 93, 110; // #005D6E x
-  --coo-rgb-primary: 32, 128, 141; //#22808d
-  --coo-rgb-primary-01: 52, 154, 167; // #349AA7
-  --coo-rgb-primary-02: 138, 229, 255; // #8AE5FF
-  --coo-rgb-primary-03: 223, 248, 255; // #DFF8FF
-  --coo-rgb-primary-04: 245, 253, 255; // #F5FDFF
-  // secondaries
-  --coo-rgb-secondary-dark: 34, 32, 32; //#303741 x
-  --coo-rgb-secondary: 78, 75, 85; //#444B55 x
-  --coo-rgb-secondary-01: 137, 137, 132; //#898984 x
-  --coo-rgb-secondary-02: 236, 236, 231; //#ecece7 x
-  --coo-rgb-secondary-03: 228, 228, 221; //#E4E4DD x
-  --coo-rgb-secondary-04: 254, 254, 251; //#fefefb x
-  // colors
-  --coo-rgb-color-01: 77, 182, 148; // #4DB694
-  --coo-rgb-color-02: 0, 169, 170; // #00A9AA
-  --coo-rgb-color-03: 119, 126, 188; // #777EBC
-  --coo-rgb-color-04: 95, 132, 95; // #5F84C3
-  --coo-rgb-color-05: 50, 141, 205; // #328DCD
-  // semantics
-  --coo-rgb-highlight: 115, 248, 253; // #73F8FD x
-  --coo-rgb-error: 246, 0, 0; // #f60000
-  --coo-rgb-warning: 255, 122, 0; // #ff7a00
-  --coo-rgb-success: 77, 182, 148; // #4db694
-  --coo-rgb-success-bk: 246, 255, 252; // #F6FFFC
-  --coo-rgb-error-bk-dark: 67, 39, 39; // #432727
-  --coo-rgb-error-bk-light: 255, 239, 239; // #ffefef
-  --coo-rgb-alert-bk: 255, 239, 239; // #ffefef
+	// to use for color effects and less-antd variables es: rgba(var(--coo-white), .8)
+	//254, 254, 251; // #fefefb
+	--coo-rgb-white: 254, 254, 251; // #fcfcf9 x
+	--coo-rgb-black: 0, 0, 0; // #000000
+	--coo-rgb-dark: 19, 52, 59; // #13343B x
+	// primaries
+	--coo-rgb-primary-dark: 0, 93, 110; // #005D6E x
+	--coo-rgb-primary: 32, 128, 141; //#22808d
+	--coo-rgb-primary-01: 52, 154, 167; // #349AA7
+	--coo-rgb-primary-02: 138, 229, 255; // #8AE5FF
+	--coo-rgb-primary-03: 223, 248, 255; // #DFF8FF
+	--coo-rgb-primary-04: 245, 253, 255; // #F5FDFF
+	// secondaries
+	--coo-rgb-secondary-dark: 34, 32, 32; //#303741 x
+	--coo-rgb-secondary: 78, 75, 85; //#444B55 x
+	--coo-rgb-secondary-01: 137, 137, 132; //#898984 x
+	--coo-rgb-secondary-02: 236, 236, 231; //#ecece7 x
+	--coo-rgb-secondary-03: 228, 228, 221; //#E4E4DD x
+	--coo-rgb-secondary-04: 254, 254, 251; //#fefefb x
+	// colors
+	--coo-rgb-color-01: 77, 182, 148; // #4DB694
+	--coo-rgb-color-02: 0, 169, 170; // #00A9AA
+	--coo-rgb-color-03: 119, 126, 188; // #777EBC
+	--coo-rgb-color-04: 95, 132, 95; // #5F84C3
+	--coo-rgb-color-05: 50, 141, 205; // #328DCD
+	// semantics
+	--coo-rgb-highlight: 115, 248, 253; // #73F8FD x
+	--coo-rgb-error: 246, 0, 0; // #f60000
+	--coo-rgb-warning: 255, 122, 0; // #ff7a00
+	--coo-rgb-success: 77, 182, 148; // #4db694
+	--coo-rgb-success-bk: 246, 255, 252; // #F6FFFC
+	--coo-rgb-error-bk-dark: 67, 39, 39; // #432727
+	--coo-rgb-error-bk-light: 255, 239, 239; // #ffefef
+	--coo-rgb-alert-bk: 255, 239, 239; // #ffefef
 
-  // full
-  --coo-rgb-full-black: 0, 0, 0; // #000000
-  --coo-rgb-full-red: 255, 0, 0; // #ff0000
-  --coo-rgb-full-green: 0, 255, 0; // #00ff00
-  --coo-rgb-full-blue: 0, 0, 255; // #0000ff
-  // specials
-  --coo-rgb-special-blue: 0, 30, 255; // #001eff
-  --coo-rgb-special-green: 94, 255, 0; // #5eff00
-  --coo-rgb-special-dark-grey: 18, 16, 16; // #121010
-  --coo-rgb-error-dark: 255, 56, 56; // #FF3838
+	// full
+	--coo-rgb-full-black: 0, 0, 0; // #000000
+	--coo-rgb-full-red: 255, 0, 0; // #ff0000
+	--coo-rgb-full-green: 0, 255, 0; // #00ff00
+	--coo-rgb-full-blue: 0, 0, 255; // #0000ff
+	// specials
+	--coo-rgb-special-blue: 0, 30, 255; // #001eff
+	--coo-rgb-special-green: 94, 255, 0; // #5eff00
+	--coo-rgb-special-dark-grey: 18, 16, 16; // #121010
+	--coo-rgb-error-dark: 255, 56, 56; // #FF3838
 
-  // * * * * LIGHT MODE COLORS BASE - to use as color variable * * * *
+	// * * * * LIGHT MODE COLORS BASE - to use as color variable * * * *
 
-  --coo-white: rgb(var(--coo-rgb-white));
-  --coo-dark: rgb(var(--coo-rgb-dark));
-  --coo-black: rgb(var(--coo-rgb-black)); //x
-  // primaries
-  --coo-primary-dark: rgb(var(--coo-rgb-primary-dark));
-  --coo-primary: rgb(var(--coo-rgb-primary));
-  --coo-primary-01: rgb(var(--coo-rgb-primary-01));
-  --coo-primary-02: rgb(var(--coo-rgb-primary-02));
-  --coo-primary-03: rgb(var(--coo-rgb-primary-03));
-  --coo-primary-04: rgb(var(--coo-rgb-primary-04));
-  // secondaries
-  --coo-secondary-dark: rgb(var(--coo-rgb-secondary-dark));
-  --coo-secondary: rgb(var(--coo-rgb-secondary));
-  --coo-secondary-01: rgb(var(--coo-rgb-secondary-01));
-  --coo-secondary-02: rgb(var(--coo-rgb-secondary-02));
-  --coo-secondary-03: rgb(var(--coo-rgb-secondary-03));
-  --coo-secondary-04: rgb(var(--coo-rgb-secondary-04));
-  // colors
-  --coo-color-01: rgb(var(--coo-rgb-color-01));
-  --coo-color-02: rgb(var(--coo-rgb-color-02));
-  --coo-color-03: rgb(var(--coo-rgb-color-03));
-  --coo-color-04: rgb(var(--coo-rgb-color-04));
-  --coo-color-05: rgb(var(--coo-rgb-color-05));
-  --color-active: rgb(var(--coo-rgb-secondary-01));
-  // semantics
-  --coo-highlight: rgb(var(--coo-rgb-highlight));
-  --coo-error: rgb(var(--coo-rgb-error));
-  --coo-warning: rgb(var(--coo-rgb-warning));
-  --coo-success: rgb(var(--coo-rgb-success));
-  --coo-success-bk: rgb(var(--coo-rgb-success-bk));
-  --coo-error-bk-dark: rgb(var(--coo-rgb-error-bk-dark));
-  --coo-error-bk-light: rgb(var(--coo-rgb-error-bk-light));
-  --coo-alert-bk: rgb(var(--coo-rgb-alert-bk));
-  --coo-highlight-bk: rgb(var(--coo-rgb-highlight-bk));
-  --coo-white-bk: 254, 254, 251; // #fefefb;
+	--coo-white: rgb(var(--coo-rgb-white));
+	--coo-dark: rgb(var(--coo-rgb-dark));
+	--coo-black: rgb(var(--coo-rgb-black)); //x
+	// primaries
+	--coo-primary-dark: rgb(var(--coo-rgb-primary-dark));
+	--coo-primary: rgb(var(--coo-rgb-primary));
+	--coo-primary-01: rgb(var(--coo-rgb-primary-01));
+	--coo-primary-02: rgb(var(--coo-rgb-primary-02));
+	--coo-primary-03: rgb(var(--coo-rgb-primary-03));
+	--coo-primary-04: rgb(var(--coo-rgb-primary-04));
+	// secondaries
+	--coo-secondary-dark: rgb(var(--coo-rgb-secondary-dark));
+	--coo-secondary: rgb(var(--coo-rgb-secondary));
+	--coo-secondary-01: rgb(var(--coo-rgb-secondary-01));
+	--coo-secondary-02: rgb(var(--coo-rgb-secondary-02));
+	--coo-secondary-03: rgb(var(--coo-rgb-secondary-03));
+	--coo-secondary-04: rgb(var(--coo-rgb-secondary-04));
+	// colors
+	--coo-color-01: rgb(var(--coo-rgb-color-01));
+	--coo-color-02: rgb(var(--coo-rgb-color-02));
+	--coo-color-03: rgb(var(--coo-rgb-color-03));
+	--coo-color-04: rgb(var(--coo-rgb-color-04));
+	--coo-color-05: rgb(var(--coo-rgb-color-05));
+	--color-active: rgb(var(--coo-rgb-secondary-01));
+	// semantics
+	--coo-highlight: rgb(var(--coo-rgb-highlight));
+	--coo-error: rgb(var(--coo-rgb-error));
+	--coo-warning: rgb(var(--coo-rgb-warning));
+	--coo-success: rgb(var(--coo-rgb-success));
+	--coo-success-bk: rgb(var(--coo-rgb-success-bk));
+	--coo-error-bk-dark: rgb(var(--coo-rgb-error-bk-dark));
+	--coo-error-bk-light: rgb(var(--coo-rgb-error-bk-light));
+	--coo-alert-bk: rgb(var(--coo-rgb-alert-bk));
+	--coo-highlight-bk: rgb(var(--coo-rgb-highlight-bk));
+	--coo-white-bk: 254, 254, 251; // #fefefb;
 
-  .dark {
-    --coo-dark: rgb(var(--coo-rgb-white));
-    --coo-error: rgb(var(--coo-rgb-error-dark));
-    --coo-primary: rgb(var(--coo-rgb-primary));
-    --coo-secondary-03: rgb(var(--coo-rgb-secondary), 0.5);
-    --coo-secondary: rgb(var(--coo-rgb-secondary-03));
-    --coo-white-bk: rgb(var(--coo-rgb-secondary-dark));
-  }
+	.dark {
+		--coo-dark: rgb(var(--coo-rgb-white));
+		--coo-error: rgb(var(--coo-rgb-error-dark));
+		--coo-primary: rgb(var(--coo-rgb-primary));
+		--coo-secondary-03: rgb(var(--coo-rgb-secondary), .5);
+		--coo-secondary: rgb(var(--coo-rgb-secondary-03));
+		--coo-white-bk: rgb(var(--coo-rgb-secondary-dark));
+	}
 }
