fix: color and font

--- a/src/styles/_typography.less
+++ b/src/styles/_typography.less
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap');
 
 :root,
 html body,
 .ant-layout {
-	--coo-body-font: 'Open Sans', sans-serif;
-	--coo-header-font: 'Open Sans', sans-serif;
+	--coo-body-font: 'Montserrat', sans-serif;
+	--coo-header-font: 'Montserrat', sans-serif;
 	--coo-monospace-font: Monaco, Menlo, "Ubuntu Mono", Consolas, source-code-pro, monospace;
 	--coo-font-weight-lighter: 200;
 	--coo-font-weight-light: 300;
