--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -3,23 +3,24 @@
 :root,
 .light {
 	// to use for color effects and less-antd variables es: rgba(var(--coo-white), .8)
-	--coo-rgb-white: 255, 255, 255; // #FFFFFF
-	--coo-rgb-black: 0, 0, 0; // #000000
-	--coo-rgb-dark: 24, 35, 54; // #182336
+	//254, 254, 251; // #fefefb
+	--coo-rgb-white: 254, 254, 251; // #fcfcf9 x
+	--coo-rgb-black: 0, 0, 0; // #000000 
+	--coo-rgb-dark: 19, 52, 59; // #13343B x
 	// primaries
-	--coo-rgb-primary-dark: 10, 113, 187; // #0A71BB rgba(10, 113, 187, 1)
-	--coo-rgb-primary: 54, 149, 217; //#3695D9
-	--coo-rgb-primary-01: 115, 178, 224; //#73B2E0 rgba(115, 178, 224, 1)
-	--coo-rgb-primary-02: 200, 228, 249; //#C8E4F9 rgba(200, 228, 249, 1)
-	--coo-rgb-primary-03: 229, 241, 250; //#E5F1FA rgba(229, 241, 250, 1)
-	--coo-rgb-primary-04: 241, 249, 255; //#F1F9FF rgba(241, 249, 255, 1)
+	--coo-rgb-primary-dark: 0, 93, 110; // #005D6E x
+	--coo-rgb-primary: 32, 128, 141; //#22808d
+	--coo-rgb-primary-01: 52, 154, 167; // #349AA7
+	--coo-rgb-primary-02: 138, 229, 255; // #8AE5FF
+	--coo-rgb-primary-03: 223, 248, 255; // #DFF8FF
+	--coo-rgb-primary-04: 245, 253, 255; // #F5FDFF
 	// secondaries
-	--coo-rgb-secondary-dark: 48 55 65; //#303741 rgba(48, 55, 65, 1)
-	--coo-rgb-secondary: 67, 76, 107; //#4B4F54 rgba(75, 79, 84, 1)
-	--coo-rgb-secondary-01: 144, 152, 180; //#9B99A1 rgba(155, 153, 161, 1)
-	--coo-rgb-secondary-02: 205, 207, 226; //#CCC9D4 rgba(204, 201, 212, 1)
-	--coo-rgb-secondary-03: 226, 223, 230; //#DBDBDB rgba(219, 219, 219, 1)
-	--coo-rgb-secondary-04: 250, 250, 252; //#fafafc
+	--coo-rgb-secondary-dark: 34, 32, 32; //#303741 x
+	--coo-rgb-secondary: 78, 75, 85; 	//#444B55 x
+	--coo-rgb-secondary-01: 137, 137, 132; 	//#898984 x
+	--coo-rgb-secondary-02: 236, 236, 231; //#ecece7 x
+	--coo-rgb-secondary-03: 228, 228, 221; //#E4E4DD x
+	--coo-rgb-secondary-04: 254, 254, 251; //#fefefb x
 	// colors
 	--coo-rgb-color-01: 77, 182, 148;  // #4DB694
 	--coo-rgb-color-02: 0, 169, 170; // #00A9AA
@@ -27,7 +28,7 @@
 	--coo-rgb-color-04: 95, 132, 95; // #5F84C3
 	--coo-rgb-color-05: 50, 141, 205; // #328DCD
 	// semantics
-	--coo-rgb-highlight: 255, 255, 0; // #FFFF00 rgba(255, 255, 0, 1)
+	--coo-rgb-highlight: 115, 248, 253; // #73F8FD x
 	--coo-rgb-error: 246, 0, 0; // #f60000
 	--coo-rgb-warning: 255, 122, 0; // #ff7a00
 	--coo-rgb-success: 77, 182, 148; // #4db694
@@ -35,7 +36,7 @@
 	--coo-rgb-error-bk-dark: 67, 39, 39; // #432727
 	--coo-rgb-error-bk-light: 255, 239, 239; // #ffefef
 	--coo-rgb-alert-bk: 255, 239, 239; // #ffefef
-	--coo-rgb-highlight-bk: 57, 57, 22; // #393916
+
 	// full
 	--coo-rgb-full-black: 0, 0, 0; // #000000
 	--coo-rgb-full-red: 255, 0, 0; // #ff0000
@@ -52,6 +53,7 @@
 
 	--coo-white: rgb(var(--coo-rgb-white));
 	--coo-dark: rgb(var(--coo-rgb-dark));
+	--coo-black: rgb(var(--coo-rgb-black)); //x
 	// primaries
 	--coo-primary-dark: rgb(var(--coo-rgb-primary-dark));
 	--coo-primary: rgb(var(--coo-rgb-primary));
@@ -83,15 +85,14 @@
 	--coo-error-bk-light: rgb(var(--coo-rgb-error-bk-light));
 	--coo-alert-bk: rgb(var(--coo-rgb-alert-bk));
 	--coo-highlight-bk: rgb(var(--coo-rgb-highlight-bk));
-	--coo-white-bk: rgb(var(--coo-rgb-white));
+	--coo-white-bk: rgb(var(--coo-rgb-white)); // #fefefb;
 
 	.dark {
-		--coo-primary: rgb(var(--coo-rgb-primary-01));
+		--coo-primary: rgb(var(--coo-rgb-primary));
 		--coo-secondary: rgb(var(--coo-rgb-secondary-03));
 		--coo-dark: rgb(var(--coo-rgb-white));
 		--coo-white-bk: rgb(var(--coo-rgb-secondary-dark));
-		--coo-secondary-04: rgb(var(--coo-rgb-dark));
-		--coo-secondary-03: rgb(var(--coo-rgb-secondary));
+		--coo-secondary-03: rgb(var(--coo-rgb-secondary), .5);
 		--coo-error: rgb(var(--coo-rgb-error-dark));
 	}
 }
