fix: border color select active and menu active font color

--- a/src/lib/components/menu/_styles.less
+++ b/src/lib/components/menu/_styles.less
@@ -9,6 +9,13 @@
 		}
 	}
 
+	.ant-menu-item-selected {
+		.ant-menu-title-content {
+			color: var(--coo-white);
+			font-weight: var(--coo-font-weight-light);
+		}
+	}
+
 	.ant-menu-title-content {
 		color: var(--coo-secondary);
 		font-weight: var(--coo-font-weight-light);
