--- a/src/lib/components/select/_styles.less
+++ b/src/lib/components/select/_styles.less
@@ -1,4 +1,4 @@
-.c-select {
+.ant-select.c-select {
 	vertical-align: top;
 
 	svg,
@@ -70,6 +70,14 @@
 			display: none;
 		}
 	}
+
+	&.ant-select-focused:not(.ant-select-disabled).ant-select:not(.ant-select-customize-input) .ant-select-selector,
+	.ant-select-selector:focus,
+	.ant-select-selector:active {
+		border-color: var(--coo-primary-01);
+		box-shadow: 0 0 0 0;
+	}
+
 
 	.ant-select-selection__choice {
 		background-color: var(--coo-secondary-03);
