--- a/src/lib/components/select/_styles.less
+++ b/src/lib/components/select/_styles.less
@@ -71,6 +71,13 @@
 		}
 	}
 
+  &:hover {
+    &.ant-select-outlined:not(.ant-select-disabled).ant-select:not(.ant-select-customize-input) .ant-select-selector {
+		border-color: var(--coo-primary-01);
+		box-shadow: 0 0 0 0;
+	  }
+  }
+
 	&.ant-select-focused:not(.ant-select-disabled).ant-select:not(.ant-select-customize-input) .ant-select-selector,
 	.ant-select-selector:focus,
 	.ant-select-selector:active {
