feat: manage dark for coo-secondary-04

--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -93,6 +93,7 @@
 		--coo-dark: rgb(var(--coo-rgb-white));
 		--coo-white-bk: rgb(var(--coo-rgb-secondary-dark));
 		--coo-secondary-03: rgb(var(--coo-rgb-secondary), .5);
+		--coo-secondary-04: rgb(var(--coo-rgb-black));
 		--coo-error: rgb(var(--coo-rgb-error-dark));
 	}
 }
