--- a/src/lib/components/alert-legacy/_styles.less
+++ b/src/lib/components/alert-legacy/_styles.less
@@ -1,3 +1,4 @@
+
 .c-alert-legacy {
 	padding: 1rem;
 	position: relative;
@@ -64,6 +65,10 @@
 
 		h2 {
 			color: var(--coo-error);
+		}
+
+		ul {
+			color: var(--color-error);
 		}
 
 		.c-alert-legacy--toggle,
