fix: ul color in alert-legacy error (#109)
* fix: error

* fix: whitespace

---------

Co-authored-by: Luca Tagliabue <luca.tagliabue@radicalbit.io>

--- a/src/lib/components/alert-legacy/_styles.less
+++ b/src/lib/components/alert-legacy/_styles.less
@@ -66,6 +66,10 @@
 			color: var(--coo-error);
 		}
 
+		ul {
+			color: var(--color-error);
+		}
+
 		.c-alert-legacy--toggle,
 		.c-alert-legacy--icon {
 			color: var(--coo-error) !important;
