feat: change border radius

--- a/src/lib/components/collapse/_styles.less
+++ b/src/lib/components/collapse/_styles.less
@@ -15,7 +15,7 @@
 		background: transparent;
 		border: none;
 		font-size: 1rem;
-		border-radius: 0;
+		border-radius: var(--coo-border-radius-small);
 
 		.ant-collapse-item {
 			border: .063rem solid var(--coo-secondary-03);
@@ -75,10 +75,10 @@
 		}
 
 		.ant-collapse-item:last-child {
-			border-radius: 0;
+			border-radius: var(--coo-border-radius-small);
 
 			.ant-collapse-header {
-				border-radius: 0;
+				border-radius: var(--coo-border-radius-small);
 			}
 		}
 
