--- a/src/lib/components/menu/_styles.less
+++ b/src/lib/components/menu/_styles.less
@@ -11,7 +11,7 @@
 
 	.ant-menu-item-selected {
 		.ant-menu-title-content {
-			color: var(--coo-white);
+			color: var(--coo-secondary);
 			font-weight: var(--coo-font-weight-light);
 		}
 	}
@@ -30,11 +30,11 @@
 	}
 
 	.ant-menu-item.ant-menu-item-active {
-		background-color: var(--coo-secondary-04);
+		background-color: rgba(var(--coo-rgb-secondary-03), .2);
 	}
 
 	.ant-menu-item:not(.ant-menu-item-selected).ant-menu-item-active {
-		background-color: var(--coo-secondary-04);
+		background-color: rgba(var(--coo-rgb-secondary-03), .2);
 	}
 }
 
@@ -46,11 +46,11 @@
 			}
 
 			.ant-menu-item.ant-menu-item-active {
-				background-color: var(--coo-secondary-03);
+				background-color: rgba(var(--coo-rgb-secondary-03), .1);
 			}
 
 			.ant-menu-item:not(.ant-menu-item-selected).ant-menu-item-active {
-				background-color: var(--coo-secondary-03);
+				background-color: rgba(var(--coo-rgb-secondary-03), .1);
 			}
 		}
 	}
